# cpp-symbol-scout

./: .gitignore  DEPENDENCIES.md  README.md  SKILL.md  pyproject.toml  readme.txt
agents/: openai.yaml
benchmarks/godot/: godot_symbol_cases.json  run_godot_symbol_benchmark.py
benchmarks/godot/results/: godot_symbol_benchmark_analysis.md  godot_symbol_benchmark_summary.md
libraries/cpp-build-log-filter/: README.md  pyproject.toml
libraries/cpp-build-log-filter/examples/: run_filtered_build.py
libraries/cpp-build-log-filter/examples/cmake-sample/: CMakeLists.txt  main.cpp
libraries/cpp-build-log-filter/examples/make-warning-error/: Makefile  main.cpp
libraries/cpp-build-log-filter/examples/simple-make-project/: Makefile
libraries/cpp-build-log-filter/examples/simple-make-project/include/: noisy.hpp
libraries/cpp-build-log-filter/examples/simple-make-project/src/: main.cpp
libraries/cpp-build-log-filter/src/cpp_build_log_filter/: __init__.py  core.py
libraries/cpp-build-log-filter/tests/: test_core.py
references/: cli-workflow.md  integration.md  troubleshooting.md
services/cpp-clangd-service/: README.md  pyproject.toml
services/cpp-clangd-service/src/cpp_clangd_service/: cli.py  core.py
services/cpp-clangd-service/tests/: test_core.py
skills/cpp-call-hierarchy/: SKILL.md  pyproject.toml
skills/cpp-call-hierarchy/agents/: openai.yaml
skills/cpp-call-hierarchy/benchmarks/godot/: TEST_REPORT.md
skills/cpp-call-hierarchy/src/cpp_call_hierarchy/: cli.py  core.py
skills/cpp-call-hierarchy/tests/: test_core.py
skills/cpp-diagnostic-context/: SKILL.md  pyproject.toml
skills/cpp-diagnostic-context/agents/: openai.yaml
skills/cpp-diagnostic-context/benchmarks/godot/: TEST_REPORT.md
skills/cpp-diagnostic-context/src/cpp_diagnostic_context/: cli.py  core.py
skills/cpp-diagnostic-context/tests/: test_core.py
skills/cpp-include-analyzer/: SKILL.md  pyproject.toml
skills/cpp-include-analyzer/src/include_analyzer/: cli.py
skills/cpp-include-analyzer/tests/: test_analyzer.py
skills/cpp-include-finder/: SKILL.md  pyproject.toml
skills/cpp-include-finder/agents/: openai.yaml
skills/cpp-include-finder/src/include_finder/: cli.py
skills/cpp-reference-finder/: SKILL.md  pyproject.toml
skills/cpp-reference-finder/agents/: openai.yaml
skills/cpp-reference-finder/benchmarks/godot/: TEST_REPORT.md
skills/cpp-reference-finder/src/cpp_reference_finder/: cli.py  core.py  service_client.py
skills/cpp-reference-finder/tests/: test_core.py
skills/cpp-static-checker/: SKILL.md  pyproject.toml
skills/cpp-static-checker/agents/: openai.yaml
skills/cpp-static-checker/examples/static-check-sample/: .clang-tidy  compile_commands.json
skills/cpp-static-checker/examples/static-check-sample/src/: static_check_sample.cpp
skills/cpp-static-checker/src/cpp_static_checker/: cli.py  core.py
skills/cpp-static-checker/tests/: test_core.py
skills/cpp-symbol-scout/: SKILL.md  pyproject.toml
skills/cpp-symbol-scout/benchmarks/godot/: run_godot_symbol_benchmark.py  symbol_lookup_scenarios.md
skills/cpp-symbol-scout/benchmarks/godot/results/: godot_symbol_benchmark.jsonl  godot_symbol_benchmark_summary.md
skills/cpp-symbol-scout/references/: cli-workflow.md  integration.md  troubleshooting.md
skills/cpp-symbol-scout/src/cpp_symbol_scout/: class_members.py  cli.py  lsp.py  models.py  snippets.py  uri.py
skills/cpp-symbol-scout/tests/: test_class_members.py
skills/cpp-type-inspector/: SKILL.md  pyproject.toml
skills/cpp-type-inspector/agents/: openai.yaml
skills/cpp-type-inspector/benchmarks/godot/: TEST_REPORT.md
skills/cpp-type-inspector/src/cpp_type_inspector/: cli.py  core.py
skills/cpp-type-inspector/tests/: test_core.py
src/cpp_symbol_scout/: __init__.py  cli.py  daemon.py  paths.py
tests/: test_lsp_scoring.py  test_paths.py  test_snippets.py
tools/: README.md
tools/cpp-include-analyzer/: README.md  SKILL.md
tools/cpp-include-analyzer/agents/: openai.yaml
tools/cpp-include-analyzer/src/include_analyzer/: __init__.py  analyzer.py
tools/cpp-include-finder/: README.md  SKILL.md
tools/cpp-include-finder/src/include_finder/: __init__.py  finder.py
tools/cpp-include-finder/tests/: test_finder.py
