[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-build-log-filter"
version = "0.1.0"
description = "Filter noisy CMake/Make C++ build logs for AI context."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
