[project]
name = "cpp-clangd-service"
version = "0.1.0"
description = "Persistent clangd service for C++ AI tooling."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cpp-clangd-service = "cpp_clangd_service.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
