[project]
name = "cpp-reference-finder"
version = "0.1.0"
description = "Find semantic C/C++ symbol references through clangd."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cpp-reference-finder = "cpp_reference_finder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
