[project]
name = "cpp-static-checker"
version = "0.1.0"
description = "Run clang-tidy static checks and produce AI-friendly C/C++ diagnostics."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cpp-static-checker = "cpp_static_checker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

