[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-symbol-scout"
version = "0.1.0"
description = "Fast C++ symbol lookup CLI backed by cpp-clangd-service."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cpp-symbol-scout contributors" }]
dependencies = []

[project.scripts]
cpp-symbol-scout = "cpp_symbol_scout.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
