[project]
name = "cpp-type-inspector"
version = "0.1.0"
description = "Inspect C/C++ expression and symbol types through clangd."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cpp-type-inspector = "cpp_type_inspector.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
